# pal-edit

./: CMakeLists.txt  Makefile
src/: application.cc  application.hh  color-grid.cc  color-grid.hh  confirm-quit.cc  confirm-quit.hh  default_palette.hh  directory.cc  directory.hh  edit-color.cc  edit-color.hh  font.cc  font.hh  global.cc  global.hh  main.cc  mode-base.cc  mode-base.hh  new-grid-mode.cc  new-grid-mode.hh  open-file-mode.cc  open-file-mode.hh  palette.cc  palette.hh  save-file-mode.cc  save-file-mode.hh  surface.cc  surface.hh  video.cc  video.hh
